[gd_scene load_steps=2 format=3 uid="uid://dchc6pnichkp2"]

[ext_resource type="Script" path="res://Scripts/EnemySpawner.gd" id="1_evwm6"]

[node name="EnemyManager" type="Node"]
script = ExtResource("1_evwm6")

[node name="EnemyTimer" type="Timer" parent="."]

[node name="GameTimer" type="Timer" parent="."]

[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
